hdone/objects/Address_Type__c.object
<CustomObject>
    <description>Checks to ensure both facility and provider are not populated</description>
    <fields>
        <fullName>AccountIdFormula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org. Does logic to determine if need to use Source or Target Ids for formula. Needed to correctly update record after SF2SF sharing.</description>
        <formula>IF(NOT(ISBLANK(Facility__c)),
CASE(  SourceOrg__c  , &quot;Customer&quot;,
(CASE(  Facility__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Facility__c),
&quot;HealthDetail&quot;, Facility__r.ExternalId__c, &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( Facility__r.SourceOrg__c , &quot;HealthDetail&quot;,Facility__r.ExternalId__c,
&quot;Customer&quot;, Facility__r.Remote_Account_Id__c , &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)


/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing
Uses Name Connection to determine if shared from other org*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if address association is currently active</description>
        <inlineHelpText>Is address association active?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AddressIdFormula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org. Does logic to determine if need to use Source or Target Ids for formula. Needed to correctly update record after SF2SF sharing.</description>
        <formula>IF(NOT(ISBLANK(Address__c)),
CASE(  SourceOrg__c  , &quot;Customer&quot;,
(CASE(  Address__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Address__c),
&quot;HealthDetail&quot;, Address__r.ExternalId__c, &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( Address__r.SourceOrg__c , &quot;HealthDetail&quot;,Address__r.ExternalId__c,
&quot;Customer&quot;, Address__r.Remote_AddressId__c , &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)


/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing
Uses Name Connection to determine if shared from other org*/</formula>
        <label>AddressIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressTypeId_Formula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org. Does logic to determine if need to use Source or Target Ids for formula. Needed to correctly update record after SF2SF sharing.</description>
        <formula>CASE(  SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Id),
&quot;HealthDetail&quot;,
ExternalId__c ,&quot;Error&quot;)

/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing
Uses Name Connection to determine if shared from other org*/</formula>
        <label>AddressTypeId Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Type_Related_External__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>External Address Type Relationship</description>
        <inlineHelpText>Related Address Type</inlineHelpText>
        <label>Address Type Related External</label>
        <referenceTo>Address_Type__c</referenceTo>
        <relationshipLabel>Address Types (Address Type Related External)</relationshipLabel>
        <relationshipName>Address_Types2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <description>Type of address for the entity</description>
        <inlineHelpText>How this Provider or Facility uses this address.</inlineHelpText>
        <label>Address Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mailing - Primary</fullName>
                </value>
                <value>
                    <fullName>Mailing - Secondary</fullName>
                </value>
                <value>
                    <fullName>Home Primary</fullName>
                </value>
                <value>
                    <fullName>Home Secondary</fullName>
                </value>
                <value>
                    <fullName>Practice</fullName>
                    <default>true</default>
                    <label>Practice</label>
                </value>
                <value>
                    <fullName>Facility Address</fullName>
                </value>
                <value>
                    <fullName>Billing - Primary</fullName>
                </value>
                <value>
                    <fullName>Directory - Online</fullName>
                </value>
                <value>
                    <fullName>Directory - Print</fullName>
                </value>
                <value>
                    <fullName>Member Services</fullName>
                </value>
                <value>
                    <fullName>Consumer Assistance</fullName>
                </value>
                <value>
                    <fullName>Hospital - Admitting Privilege</fullName>
                </value>
                <value>
                    <fullName>Hospital - Non Admitting Privilege</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_Type_rel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Address Type. Used for corrected information to show which record is correct for incorrect records.</description>
        <inlineHelpText>Related Address Type</inlineHelpText>
        <label>Related Location</label>
        <referenceTo>Address_Type__c</referenceTo>
        <relationshipLabel>Address Types</relationshipLabel>
        <relationshipName>Address_Types_rel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to address object for entity</description>
        <inlineHelpText>Lookup to address record. Click to open additional detail on address.</inlineHelpText>
        <label>Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Address Types</relationshipLabel>
        <relationshipName>EntityAddresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments, if applicable</description>
        <inlineHelpText>Comments, if applicable</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Confirmation_Source__c</fullName>
        <description>Source for most recent confirmation</description>
        <inlineHelpText>Substituting for type of Confirmation</inlineHelpText>
        <label>Confirmation Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Visit</fullName>
                </value>
                <value>
                    <fullName>Provider_Master_1</fullName>
                </value>
                <value>
                    <fullName>Provider_Master_2</fullName>
                </value>
                <value>
                    <fullName>Directory_Check</fullName>
                </value>
                <value>
                    <fullName>Directory Check Assigned</fullName>
                </value>
                <value>
                    <fullName>Provider_Master_3</fullName>
                </value>
                <value>
                    <fullName>Provider_Master_4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Confirmation</description>
        <inlineHelpText>Confirmation</inlineHelpText>
        <label>Confirmation</label>
        <referenceTo>Confirmation__c</referenceTo>
        <relationshipLabel>Address Types</relationshipLabel>
        <relationshipName>Address_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactName_FieldAnalyst__c</fullName>
        <description>Contact name for Field Analyst. Cannot access name directly from AddressType object.</description>
        <formula>Provider__r.FirstName &amp;&quot; &quot;&amp; Provider__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From AddressType Contact</inlineHelpText>
        <label>ContactName_FieldAnalyst</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerId__c</fullName>
        <description>External Id from Customer. Should be unique across objects for customer.</description>
        <externalId>true</externalId>
        <inlineHelpText>External or Customer Id</inlineHelpText>
        <label>CustomerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>ExternalId</description>
        <externalId>true</externalId>
        <inlineHelpText>ExternalId</inlineHelpText>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Address Types</relationshipLabel>
        <relationshipName>FacilityAddresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flow_Status__c</fullName>
        <label>Flow Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Flow_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PNRCStatusCheck__c</fullName>
        <description>Last date and time the PartnerNetworkRecordConnection status was updated</description>
        <inlineHelpText>Last date and time the PartnerNetworkRecordConnection status was updated</inlineHelpText>
        <label>PNRCStatusCheck</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Processing_Step__c</fullName>
        <description>Used to kick off Process Builder</description>
        <inlineHelpText>What Process Builder Step to use</inlineHelpText>
        <label>Processing Step</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NewProviderDirectoryConfirmation</fullName>
                </value>
                <value>
                    <fullName>NewInitialProviderConfirmation</fullName>
                </value>
                <value>
                    <fullName>UpdateConfirmationSource</fullName>
                </value>
                <value>
                    <fullName>CreateConfirmationSourceAndIdTypes</fullName>
                </value>
                <value>
                    <fullName>CreateAuditSettingOnly</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>AuditSettingCreated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product Name</description>
        <inlineHelpText>Product Name</inlineHelpText>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Name</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProviderIdFormula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org. Does logic to determine if need to use Source or Target Ids for formula. Needed to correctly update record after SF2SF sharing.</description>
        <formula>IF(NOT(ISBLANK(Provider__c)),
CASE(  SourceOrg__c  , &quot;Customer&quot;,
(CASE(  Provider__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Provider__c),
&quot;HealthDetail&quot;, Provider__r.ExternalId__c, &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( Provider__r.SourceOrg__c , &quot;HealthDetail&quot;,Provider__r.ExternalId__c,
&quot;Customer&quot;, Provider__r.Remote_Provider_Id__c , &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)


/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing
Uses Name Connection to determine if shared from other org*/</formula>
        <label>ProviderIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Provider (contact) record</description>
        <inlineHelpText>Provider associated with this address</inlineHelpText>
        <label>Provider</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Address Types</relationshipLabel>
        <relationshipName>ProviderAddresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type_Text__c</fullName>
        <description>Used for Salesforce to Salesforce sharing</description>
        <formula>/* Gets name of Record Type for Salesforce to Salesforce sharing */
RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Record Type Name</inlineHelpText>
        <label>Record Type Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedAddressTypeIdFormula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org. Does logic to determine if need to use Source or Target Ids for formula. Needed to correctly update record after SF2SF sharing.</description>
        <formula>IF(NOT(ISBLANK(Address_Type_rel__c)),
CASE(  SourceOrg__c  , &quot;Customer&quot;,
(CASE(  Address_Type_rel__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Address_Type_rel__c),
&quot;HealthDetail&quot;, Address_Type_rel__r.ExternalId__c, &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( Address_Type_rel__r.SourceOrg__c , &quot;HealthDetail&quot;,Address_Type_rel__r.ExternalId__c,
&quot;Customer&quot;, Address_Type_rel__r.Remote_AddressType_Id__c , &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)


/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing
Uses Name Connection to determine if shared from other org*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer record Id or External Id</inlineHelpText>
        <label>RelatedAddressTypeIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Account_Id__c</fullName>
        <description>Remote Account Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Remote Account Id</inlineHelpText>
        <label>Remote Account_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_AddressType_Id__c</fullName>
        <description>Remote AddressType Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Remote AddressType Id</inlineHelpText>
        <label>Remote AddressType_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Address_Id__c</fullName>
        <description>Remote Address Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Remote Address Id</inlineHelpText>
        <label>Remote_Address_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Provider_Id__c</fullName>
        <description>Remote Provider Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Remote Provider Id</inlineHelpText>
        <label>Remote_Provider_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Record_Type__c</fullName>
        <description>Remote Record Type name. Used for Salesforce to Salesforce sharing</description>
        <inlineHelpText>Remote Record Type name. Used for Salesforce to Salesforce sharing</inlineHelpText>
        <label>Remote Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_PartnerConnection_Id__c</fullName>
        <description>Sf2Sf PartnerConnectionId Id from PartnerNetworkConnection</description>
        <externalId>true</externalId>
        <inlineHelpText>Sf2Sf PartnerConnectionId Id from PartnerNetworkConnection</inlineHelpText>
        <label>Sf2Sf_PartnerConnection_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareId__c</fullName>
        <description>Id from PartnerNetworkRecordConnection for shared record.</description>
        <inlineHelpText>Id from PartnerNetworkRecordConnection for shared record.</inlineHelpText>
        <label>Sf2Sf ShareId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareName__c</fullName>
        <description>Sharing name for Salesforce to Salesforce. Uses Custom setting to get name as PartnerNetworkConnection name cannot be changed and can be confusing</description>
        <inlineHelpText>Sharing name for Salesforce to Salesforce from Custom Setting</inlineHelpText>
        <label>Sf2Sf_ShareName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareStatus__c</fullName>
        <description>Populates shared status for Salesforce to Salesforce connection. Cannot read status from object only from PartnerNetworkConnection object</description>
        <inlineHelpText>Shared status for Salesforce to Salesforce connection. Not real time.</inlineHelpText>
        <label>Sf2Sf_ShareStatus</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceOrg__c</fullName>
        <description>Identifies which is source org for record. If record is shared FROM customer to HealthDetail then Customer else if shared other way HealthDetail. Was using formula fields but getting relationship errors.</description>
        <inlineHelpText>Identifies which is source org for record Customer or HealthDetail</inlineHelpText>
        <label>SourceOrg</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>HealthDetail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status1__c</fullName>
        <description>Location Status</description>
        <inlineHelpText>Location Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Claimed</fullName>
                </value>
                <value>
                    <fullName>Phone Change</fullName>
                </value>
                <value>
                    <fullName>Location Terminated</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_addressid__c</fullName>
        <description>AddressId from storage object. Original customer addresses moved off platform to storage such as Big Object. Used to map back for reporting</description>
        <inlineHelpText>AddressId from storage object</inlineHelpText>
        <label>Storage_addressid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Address Type</label>
    <listViews>
        <fullName>All_Facilities</fullName>
        <columns>NAME</columns>
        <columns>Facility__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Address_Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Facility__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Facilities</label>
    </listViews>
    <listViews>
        <fullName>All_Providers</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Address_Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Provider__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Providers</label>
    </listViews>
    <listViews>
        <fullName>Created_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Facility__c</columns>
        <columns>Provider__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Address_Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Created This Week</label>
    </listViews>
    <listViews>
        <fullName>New</fullName>
        <columns>NAME</columns>
        <columns>Address_Type__c</columns>
        <columns>Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>New</label>
    </listViews>
    <nameField>
        <displayFormat>addrtype-{00000000}</displayFormat>
        <label>AddressType Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Address Types</pluralLabel>
    <recordTypes>
        <fullName>Appointment_Only</fullName>
        <active>true</active>
        <description>Address types tied to appointment only regions</description>
        <label>Appointment Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Consumer_Assistance</fullName>
        <active>false</active>
        <description>Provider address Navigator</description>
        <label>Consumer Assistance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hospital_Affiliation</fullName>
        <active>false</active>
        <description>Facility</description>
        <label>Hospital Affiliation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Location_Address</fullName>
        <active>false</active>
        <description>Facility or Provider and Healthcare Provider Navigator</description>
        <label>Location Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Location_Based</fullName>
        <active>true</active>
        <description>Address type based on location Provider Navigator</description>
        <label>Location Based</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>